# pre-commit-dart

./: .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: check_changelog.py
