[metadata]
name = your_project_name
version = 0.1.0
description = A pre-commit hook to check if changelog has the correct version entry
author = Your Name
author_email = your.email@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your_username/your_project

[options]
packages = find:
install_requires =
    pre-commit
    PyYAML  # if your project needs to parse YAML

[options.entry_points]
console_scripts =
    check-changelog = pre_commit_hooks.check_changelog:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude =
    .git,
    __pycache__,
    build,
    dist

[tool:pytest]
addopts = --maxfail=2 --strict-markers
testpaths = tests

